--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                 Home<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();" href="#intro">Introduction</a></li>
-                                <li><a href="bio.html">Biography</a></li>
-                                <li><a href="cv.html">CV (Web)</a></li>
-                                <li><a target="_blank" href="zeinalipour.pdf">CV (PDF)</a></li>
+                                <li><a target="_blank" href="wan.pdf">CV (PDF)</a></li>
                             </ul>
                         </li>
                         <!--<li class="page-scroll">
