--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                 Home<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a target="_blank" href="wan.pdf">CV (PDF)</a></li>
+                                <li><a target="_blank" href="lipeng_wan_cv.pdf">CV (PDF)</a></li>
                             </ul>
                         </li>
                         <!--<li class="page-scroll">
