--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
+                       <!-- <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                 Home<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a target="_blank" href="lipeng_wan_cv.pdf">CV (PDF)</a></li>
                             </ul>
-                        </li>
+                        </li>-->
                         <!--<li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#news">News</a>
                         </li>-->
@@ -201,7 +201,7 @@
                         <p><font color="blue">Dr. Wan will be joining the <a target="_blank" href="https://csds.gsu.edu/">Departemnt of Computer Science</a> at <a target="_blank" href="https://www.gsu.edu/">Georgia State University (GSU)</a> as a tenure-track Assistant Professor in Fall 2022. </font></p>
                         <!--<p><a href="bio.html" class="btn-sm btn-primary">Biography &raquo;</a>
                         <a href="cv.html" class="btn-sm btn-primary">CV (Web)&raquo;</a>-->
-                        <a href="lipeng_wan_cv.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
+                        <!--<a href="lipeng_wan_cv.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>-->
                     </div>
                     
                 </div>
