--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8"/>
-        <title>[ Lipeng Wan @ GSU ]</title>
+        <title>[ Lipeng Wan @ ORNL ]</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         
         <!-- Font Awesome Icons -->
