added sc committee

--- a/index.html
+++ b/index.html
@@ -437,6 +437,11 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <span class="label label-success">Conference Committees</span>
                         <ul>
                             <li>
+                                <b>IEEE/ACM SC:</b>
+                                <a href="https://sc22.supercomputing.org/planning-committee/" target="_blank"><b>2022</b></a>,
+                                <i>[The International Conference for High Performance Computing, Networking, Storage, and Analysis]</i>
+                            </li>   
+                            <li>
                                 <b>IEEE HiPC:</b>
                                 <a href="https://hipc.org/" target="_blank"><b>2022</b></a>,
                                 <i>[IEEE International Conference on High Performance Computing, Data and Analytics]</i>
