changed the profile image

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section  name="home" id="home" style="margin-top:40px">
             <div class="container">
                 <div align="left" class="col-md-3">
-                        <img id="mobile-img" src="images/wan.jpg" width="200" border="0" height="250" alt="">
+                        <img id="mobile-img" src="images/20220912SAT_Lipeng_Wan_DSC3742.jpg" width="200" border="0" height="250" alt="">
                 </div>
                 <div align="left" class="col-md-4">
                     <h2>Lipeng Wan
