--- a/index.html
+++ b/index.html
@@ -136,13 +136,8 @@
                          P.O. Box 20537<br>
                          1678 Nicosia, CYPRUS<br>-->
                         <!--Phone: <a href="tel:8655744703">865-574-4703</a><br/>-->
-                        Email:
-                        <script language="JavaScript">
-                            <!--
-                            document.write("&nbsp;");
-                            spiderjam('lwan','gsu.edu');
-                            -->
-                            </script><br/>
+                        Email: lwan at gsu dot edu
+
                         <!--Lab: <a target="_blank" href="https://dmsl.cs.ucy.ac.cy/">http://dmsl.cs.ucy.ac.cy/</a><br>
                         Directions: <a target="_blank" href="https://goo.gl/FQCHMl">http://goo.gl/FQCHMl</a>-->
                     </h4>
@@ -277,10 +272,12 @@
                         </h4>-->
                         <ul>
 			    <li><span class="label label-success">IEEE TPDS</span> <a target="_blank" href="#">"Understanding the Impact of Data Staging for
-Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, Eric Suchyta, Jieyang Chen, Norbert Podhorszki, James Kress,David Pugmire, Scott Klasky. <b>IEEE Transactions on Parallel and Distributed Systems</b>, 2022. </li>
+Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, Eric Suchyta, Jieyang Chen, Norbert Podhorszki, James Kress,David Pugmire, Scott Klasky. <b>IEEE Transactions on Parallel and Distributed Systems</b>, Vol. 33, Iss. 12, pp. 4134-4147, 2022. </li>
                             <li><span class="label label-success">IEEE IPDPS'22</span> <a target="_blank" href="#">"P-ckpt: Coordinated Prioritized Checkpointing"</a>, Subhendu Behera, <b>Lipeng Wan</b>, Frank Mueller, Matthew Wolf, Scott Klasky. Proceedings of the <b>IEEE International Parallel and Distributed Processing Symposium</b>, 2022. </li>
                             <li><span class="label label-success">IEEE TPDS</span> <a target="_blank" href="#">"Improving I/O Performance for Exascale Applications through Online Data Layout Reorganization"</a>, <b>Lipeng Wan</b>, Axel Huebl, Junmin Gu, Franz Poeschel, Ana Gainaru, Ruonan Wang, Jieyang Chen, Xin Liang, Dmitry Ganyushin, Todd Munson, Ian Foster, Jean-Luc Vay, Norbert Podhorszki, Kesheng Wu, Scott Klasky. <b>IEEE Transactions on Parallel and Distributed Systems</b>, Vol. 33, Iss. 4, pp. 878-890, 2022.</li>
+                            <li><span class="label label-success">IEEE TC</span> <a target="_blank" href="#">"MGARD+: Optimizing Multilevel Methods for Error-Bounded Scientific Data Reduction"</a>, Xin Liang, Ben Whitney, Jieyang Chen, <b>Lipeng Wan</b>, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki,, Scott Klasky. <b>IEEE Transactions on Computers</b>, Vol. 7, Iss. 7, pp. 1522-1536, 2021.</li>
                             <li><span class="label label-success">IEEE IPDPS'21</span> <a target="_blank" href="#">"Accelerating Multigrid-based Hierarchical Scientific Data Refactoring on GPUs"</a>, Jieyang Chen, <b>Lipeng Wan</b>, Xin Liang, Ben Whitney, Qing Liu, David Pugmire, Nicholas Thompson, Jong Youl Choi, Matthew Wolf, Todd Munson, Ian Foster, Scott Klasky. Proceedings of the <b>IEEE International Parallel and Distributed Processing Symposium</b>, 2021.</li>
+                            <li><span class="label label-success">IEEE SC'21</span> <a target="_blank" href="#">"Error-Controlled, Progressive, and Adaptable Retrieval of Scientific Data with Multilevel Decomposition"</a>, Xin Liang, Qian Gong, Jieyang Chen, Ben Whitney, <b>Lipeng Wan</b>, Qing Liu, David Pugmire, Rick Archibald, Norbert Podhorszki, Scott Klasky. Proceedings of the <b>International Conference for High Performance Computing, Networking, Storage and Analysis</b>, 2021.</li>
                             <li><span class="label label-success">IEEE HPDC'20</span> <a target="_blank" href="#">"Orchestrating Fault Prediction with Live Migration and Checkpointing"</a>, Subhendu Behera, <b>Lipeng Wan</b>, Frank Mueller, Matthew Wolf, Scott Klasky. Proceedings of the <b>29th International Symposium on High-Performance Parallel and Distributed</b>, 2020.</li>
                             <li><span class="label label-success">IEEE ICDCS'17</span> <a target="_blank" href="#">"Comprehensive Measurement and Analysis of the User-Perceived I/O Performance in a Production Leadership-Class Storage System"</a>, <b>Lipeng Wan</b>, Matthew Wolf, Feiyi Wang, Jong Youl Choi, George Ostrouchov, Scott Klasky. Proceedings of the <b>IEEE 37th International Conference on Distributed Computing Systems</b>, 2017.</li>
                             <li><span class="label label-success">IEEE HPCC'17</span> <a target="_blank" href="#">"Analysis and Modeling of the End-to-End I/O Performance on OLCF's Titan Supercomputer"</a>, <b>Lipeng Wan</b>, Matthew Wolf, Feiyi Wang, Jong Youl Choi, George Ostrouchov, Scott Klasky. Proceedings of the <b>IEEE 19th International Conference on High Performance Computing and Communications</b>, 2017.</li>
@@ -466,6 +463,7 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <ul>
                             <li>
                                 <b>FTXS:</b>
+                                <a href="https://sites.google.com/view/ftxs2022" target="_blank"><b>2022</b></a>,
                                 <a href="https://sites.google.com/view/ftxs2021" target="_blank"><b>2021</b></a>,
                                 <i>[Workshop on Fault Tolerance for HPC at eXtreme Scale @ IEEE/ACM SC]</i>
                             </li>
