changed the gsu logo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <span><a href="https://www.gsu.edu/"><img border="0" width="70" src="images/gsu.jpeg"/></a></span>
+                    <span><a href="https://www.gsu.edu/"><img border="0" width="150" src="images/gsu-logo-2.jpg"/></a></span>
                 </div>
                 
                 <!-- Collect the nav links, forms, and other content for toggling -->
