--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                             <ul>
                                 <li>
                                     <b>DOE:</b>
-                                    <b>SBIR/STTR Programs (Solicitation: DE-FOA-0002859)</b>
+                                    <b>SBIR/STTR Programs</b>
                                 </li>
                             </ul>
                             <span class="label label-success">Journal Manuscript Reviewing</span>
