added icpp committee

--- a/index.html
+++ b/index.html
@@ -424,6 +424,10 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <span class="label label-success">Conference Program Committee</span>
                         <ul>
                             <li>
+                                <b>ACM ICPP:</b>
+                                <a href="https://icpp23.sci.utah.edu/committees/papers-tracks.html" target="_blank"><b>2023</b></a>
+                            </li>
+                            <li>
                                 <b>IEEE Cluster:</b>
                                 <a href="https://clustercomp.org/2023/committees/" target="_blank"><b>2023</b></a>
                             </li>
