added hpdc'23 paper

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             
                         </h4>-->
                         <ul>
-                            <li><span class="label label-success">ACM HPDC'23</span> <a target="_blank" href="#">""</a>, <b>Lipeng Wan</b>, Jieyang Chen, Xin Liang, Ana Gainaru, Qian Gong, Qing Liu, Ben Whitney, Joy Arulraj, Zhengchun Liu, Ian Foster, Scott Klasky. Proceedings of the <b>ACM The 32nd International Symposium on High-Performance Parallel and Distributed Computing</b>, 2023. </li>
+                            <li><span class="label label-success">ACM HPDC'23</span> <a target="_blank" href="#">"RAPIDS: Reconciling Availability, Accuracy, and Performance in Managing Geo-Distributed Scientific Data"</a>, <b>Lipeng Wan</b>, Jieyang Chen, Xin Liang, Ana Gainaru, Qian Gong, Qing Liu, Ben Whitney, Joy Arulraj, Zhengchun Liu, Ian Foster, Scott Klasky. Proceedings of the <b>ACM 32nd International Symposium on High-Performance Parallel and Distributed Computing</b>, 2023. </li>
 			    <li><span class="label label-success">IEEE TPDS</span> <a target="_blank" href="#">"Understanding the Impact of Data Staging for
 Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, Eric Suchyta, Jieyang Chen, Norbert Podhorszki, James Kress,David Pugmire, Scott Klasky. <b>IEEE Transactions on Parallel and Distributed Systems</b>, Vol. 33, Iss. 12, pp. 4134-4147, 2022. </li>
                             <li><span class="label label-success">IEEE IPDPS'22</span> <a target="_blank" href="#">"P-ckpt: Coordinated Prioritized Checkpointing"</a>, Subhendu Behera, <b>Lipeng Wan</b>, Frank Mueller, Matthew Wolf, Scott Klasky. Proceedings of the <b>IEEE International Parallel and Distributed Processing Symposium</b>, 2022. </li>
