--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <hr class="star-primary">
                         <h2>Courses</h2>
                         <ul>
+                            <li><span class="label label-success">CSC4210/6210</span> Computer Architecture (Fall 2023, Fall 2022)</li>
                             <li><span class="label label-success">CSC4311/6311</span> Cloud Computing (Spring 2023)</li>
-                            <li><span class="label label-success">CSC4210/6210</span> Computer Architecture (Fall 2022)</li>
                              <!--
                             <li><span class="label label-success">EPL646</span> <a href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl646/">Advanced Topics in Databases</a> (Winter)</li>
                             <li><span class="label label-default">EPL446</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl446/">Advanced Database Systems</a></li>
@@ -519,9 +519,11 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <hr class="star-primary">
                         <h2>Students</h2>
                         <ul>
-                            <li>
-                                TBD
-                            </li>
+                            <li> Ph.D. Students</li>
+                            <ul>
+                                <li>Ning Yan</li>
+                                <li>Vladislav Esaulov</li>
+                            </ul>
                            <!-- <li>
                                 <span class="label label-info">Ph.D.</span> (ongoing) <a target="_blank" href="https://www.cs.ucy.ac.cy/~glarko01/">Georgios Larkou</a>, University of Cyprus, Cyprus.
                             </li>-->
