--- a/index.html
+++ b/index.html
@@ -425,6 +425,15 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <span class="label label-success">Conference Program Committee</span>
                         <ul>
                             <li>
+                                <b>ISC:</b>
+                                <a href="https://www.isc-hpc.com/isc-committees-2024.html" target="_blank"><b>2024</b></a>
+                            </li>
+                            <li>
+                                <b>IEEE/ACM SC:</b>
+                                <a href="https://sc23.supercomputing.org/planning-committee/" target="_blank"><b>2023</b></a>
+                                <a href="https://sc22.supercomputing.org/planning-committee/" target="_blank"><b>2022</b></a>
+                            </li> 
+                            <li>
                                 <b>ACM ICPP:</b>
                                 <a href="https://icpp23.sci.utah.edu/committees/papers-tracks.html" target="_blank"><b>2023</b></a>
                             </li>
@@ -435,11 +444,7 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                             <li>
                                 <b>IEEE ICCCI:</b>
                                 <a href="http://iccci.org/com.html" target="_blank"><b>2023</b></a>
-                            </li>
-                            <li>
-                                <b>IEEE/ACM SC:</b>
-                                <a href="https://sc22.supercomputing.org/planning-committee/" target="_blank"><b>2022</b></a>
-                            </li>   
+                            </li>  
                             <li>
                                 <b>IEEE HiPC:</b>
                                 <a href="https://hipc.org/programcomittee/" target="_blank"><b>2022</b></a>
@@ -462,8 +467,13 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                         <ul>
                             <li>
                                 <b>FTXS:</b>
+                                <a href="https://sites.google.com/view/ftxs2023" target="_blank"><b>2023</b></a>,
                                 <a href="https://sites.google.com/view/ftxs2022" target="_blank"><b>2022</b></a>,
                                 <a href="https://sites.google.com/view/ftxs2021" target="_blank"><b>2021</b></a>
+                            </li>
+                            <li>
+                                <b>REX-IO:</b>
+                                <a href="https://sites.google.com/view/rexio/program-committee" target="_blank"><b>2023</b></a>
                             </li>
                         </ul>
                         
