--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                                     <a href="https://dl.acm.org/journal/tos" target="_blank">ACM TOS</a>
                                 </li>  
                                 <li>
+                                    <a href="https://dl.acm.org/journal/topc" target="_blank">ACM TOPC</a>
+                                </li>  
+                                <li>
                                     <a href="https://dl.acm.org/journal/tecs" target="_blank">ACM TECS</a>
                                 </li>                                                               
                                 <li>
