--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ Coupled Scientific Workflows"</a>, Ana Gainaru, <b>Lipeng Wan</b>, Ruonan Wang, 
                             </li>
                             <li>
                                 <b>IEEE/ACM SC:</b>
-                                <a href="https://sc23.supercomputing.org/planning-committee/" target="_blank"><b>2023</b></a>
+                                <a href="https://sc23.supercomputing.org/planning-committee/" target="_blank"><b>2023</b></a>,
                                 <a href="https://sc22.supercomputing.org/planning-committee/" target="_blank"><b>2022</b></a>
                             </li> 
                             <li>
