updated the portrait photo

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section  name="home" id="home" style="margin-top:80px">
             <div class="container">
                 <div align="left" class="col-md-3">
-                        <img id="mobile-img" src="images/wan-gsu.jpg" height="320" border="0" alt="">
+                        <img id="mobile-img" src="images/portrait.jpeg" height="320" border="0" alt="">
                 </div>
                 <div align="left" class="col-md-4">
                     <h2>Lipeng Wan
